--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -9,6 +9,6 @@ build_platform:
   linux_aarch64: linux_aarch64
   osx_arm64: osx_64
 provider:
-  linux_aarch64: travis
+  linux_aarch64: default
   linux_ppc64le: azure
 test: native_and_emulated
