--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -61,6 +61,7 @@ requirements:
     - transformers >=4.38.0
     - if: linux and x86_64
       then: triton
+    - nanobind >=2.0.0
 
 tests:
   - python:
