hitting an assertion in openmp. I think LTO was masking it.

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -19,6 +19,7 @@ build:
   script:
     - if: unix
       then: |
+        export CMAKE_BUILD_TYPE=Release
         export CXXFLAGS="$CXXFLAGS -isystem $PREFIX/include"
         if [[ $(uname) == "Linux" ]]; then
           export CXXFLAGS="$CXXFLAGS -Wno-dangling-reference"
